# nextjs

./: .eslintrc.json  .gitignore  .vercel.json  Dockerfile  README.md  auth.config.ts  auth.js  auth.ts  azimuths.tif  components.json  middleware.ts  netlify.toml  next.config.js  package-lock.json  package.json  schema.prisma  store.ts  tailwind.config.ts  temp.tif  temp.tiff  tsconfig.json  vercel.json
.github/: copilot-instructions.md
app/: globals.css  layout.tsx  providers.tsx
components/: aspect-chart.tsx  course-card.tsx  course-comparison-column.tsx  course-grid.tsx  course-sort-dropdown.tsx  course-type-dropdown.tsx  elevation-chart.tsx  find-path-button.tsx  gradient-cdf-chart.tsx  lazy-map.jsx  leaflet-geojson-interactive-layer.tsx  leaflet-geojson-layer.tsx  leaflet-map-lazy.tsx  leaflet-map.tsx  leaflet-pathfinding-layer.tsx  leaflet-raster-layer.tsx  location-search.tsx  login-button.jsx  login-button.tsx  map.jsx  map.tsx  mappables-grid.tsx  pagination.tsx  pathfind-map-lazy.tsx  pathfind-map.tsx  please-sync.tsx  polyline-map-lazy.tsx  polyline-map.tsx  resize-observer.tsx  topbar.tsx  (+7 more)
pathfinder/: Cargo.toml  build.rs  index.d.ts  index.js  index.ts  netflify.toml  package-lock.json  package.json
pathfinder/.github/workflows/: CI.yml
pathfinder/npm/darwin-arm64/: README.md  package.json
pathfinder/npm/darwin-x64/: README.md  package.json
pathfinder/npm/linux-x64-gnu/: README.md  package.json
pathfinder/npm/win32-x64-msvc/: README.md  package.json
pathfinder/src/: azimuth.rs  console_log.rs  find_path.rs  geotiff.rs  lib.rs  raster.rs
(+123 files in other folders)
