[package]
edition = "2021"
name = "pathfinder"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdal = { version = "0.17.1", features = ["bindgen"] }
geo-types = "0.4.3"
geojson = "0.24.1"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
pathfinding = "4.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
